--- a/examples/asciidoc/index.html
+++ b/examples/asciidoc/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/@asciidoctor/core@2.2.8/dist/css/asciidoctor.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@asciidoctor/core@3.0.4/dist/browser/asciidoctor.min.js"></script>
     <script src="https://unpkg.com/htmx.org@2.0.2/dist/htmx.min.js"></script>
-    <script src="htmx-asciidoc.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mariotoffia/htmx-extensions@v0.0.2/asciidoc/htmx-asciidoc.js"></script>
     <title>htmx AsciiDoc Demo</title>
 </head>
 <body hx-ext="asciidoc">
